--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-native": "0.76.5",
     "react-native-dnd-board": "^0.0.9",
     "react-native-draggable": "^3.3.0",
@@ -51,6 +52,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
