--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.3",
+    "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-navigation/native": "^6.0.2",
     "expo": "^52.0.24",
-    "expo-battery": "~9.0.1",
-    "expo-blur": "~14.0.1",
-    "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
-    "expo-image-picker": "~16.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-location": "~18.0.4",
-    "expo-notifications": "~0.29.11",
+    "expo-battery": "~9.0.2",
+    "expo-blur": "~14.0.2",
+    "expo-font": "~13.0.3",
+    "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.4",
+    "expo-linking": "~7.0.4",
+    "expo-location": "~18.0.5",
+    "expo-notifications": "~0.29.12",
     "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.19",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-updates": "~0.26.11",
-    "expo-web-browser": "~14.0.1",
+    "expo-splash-screen": "~0.29.20",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-updates": "~0.26.12",
+    "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
     "react-lazy-load-image-component": "^1.6.3",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-dnd-board": "^0.0.9",
     "react-native-draggable": "^3.3.0",
     "react-native-draggable-flatlist": "^4.0.1",
@@ -49,15 +49,15 @@
     "sass": "^1.79.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-native": "^0.72.8",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest": "~29.7.0",
+    "jest-expo": "^52.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
