--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-system-ui": "~4.0.7",
     "expo-updates": "~0.26.12",
     "expo-web-browser": "~14.0.2",
+    "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
