--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^52.0.24",
     "expo-battery": "~9.0.2",
     "expo-blur": "~14.0.2",
+    "expo-build-properties": "^0.13.2",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.4",
@@ -38,6 +39,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-native": "0.76.6",
     "react-native-dnd-board": "^0.0.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-draggable": "^3.3.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.20.2",
