--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-reanimated-carousel": "^4.0.0-alpha.12",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-swipeable-item": "^2.0.9",
     "react-native-web": "~0.19.13",
     "sass": "^1.79.1"
   },
