--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-battery": "~9.0.2",
     "expo-blur": "~14.0.2",
     "expo-build-properties": "^0.13.2",
+    "expo-dev-client": "^5.0.9",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.4",
