--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-swipeable-item": "^2.0.9",
     "react-native-web": "~0.19.13",
+    "react-native-wheel-color-picker": "^1.3.1",
     "sass": "^1.79.1"
   },
   "devDependencies": {
