--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.0-alpha.12",
+    "react-native-reorderable-list": "^0.9.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-sortable-listview": "^0.2.9",
