--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-dnd-board": "^0.0.9",
     "react-native-draggable": "^3.3.0",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-draglist": "^3.8.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-reanimated": "~3.16.1",
