--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-native-swipeable-item": "^2.0.9",
     "react-native-web": "~0.19.13",
     "react-native-wheel-color-picker": "^1.3.1",
-    "sass": "^1.79.1"
+    "sass": "^1.79.1",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
