--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.0-alpha.12",
-    "react-native-reorderable-list": "^0.9.0",
+    "react-native-reorderable-list": "^0.11.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-sortable-listview": "^0.2.9",
+    "react-native-svg": "15.8.0",
     "react-native-swipeable-item": "^2.0.9",
     "react-native-web": "~0.19.13",
     "react-native-wheel-color-picker": "^1.3.1",
-    "sass": "^1.79.1",
-    "react-native-svg": "15.8.0"
+    "sass": "^1.79.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
